# EclipseMenu

./: .gitignore  CMakeLists.txt  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LABELS.md  LICENSE.md  NOTICE  README.md  SECURITY.md  TRADEMARKS.md  about.md  changelog.md  mod.json  support.md
.github/: FUNDING.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: multi-platform.yml  publish.yml
cmake/: IncludeLibs.cmake  Translations.cmake
include/: Eclipse.hpp  Events.hpp  Macros.hpp  Prelude.hpp  components.hpp  config.hpp  eclipse.hpp  events.hpp  labels.hpp  modules.hpp
include/Core/: Config.hpp  InputManager.hpp  Keybind.hpp  Module.hpp  Registry.hpp  Setting.hpp
include/UI/: HeliosLayer.hpp
include/Utils/: FixedString.hpp
resources/: pp-frag.glsl  pp-vert.glsl
resources/BitmapFonts/: font_cyrillic-hd.fnt  font_cyrillic-uhd.fnt  font_cyrillic.fnt  font_default-hd.fnt  font_default-uhd.fnt  font_default.fnt  font_greek-hd.fnt  font_greek-uhd.fnt  font_greek.fnt  font_japanese-hd.fnt  font_japanese-uhd.fnt  font_japanese.fnt  font_thai-hd.fnt  font_thai-uhd.fnt  font_thai.fnt  font_vietnamese-hd.fnt  font_vietnamese-uhd.fnt  font_vietnamese.fnt
resources/Blur/: pp-frag.glsl
resources/Languages/: en.lang.json
resources/Themes/: basic.json  catppuccinmacchiato.json  gruvbox.json  megahack.json  megaoverlay.json  openhack.json
src/: Main.cpp  custom-settings.cpp  functional.hpp  main.cpp  subprocess.hpp  utils.cpp  utils.hpp
src/API/: Events.cpp
src/Core/: InputManager.cpp  Registry.cpp
src/Crashlog-Api/: main.hpp
src/Hacks/Player/: Noclip.cpp
src/UI/: HeliosLayer.cpp
src/ffmpeg-api/: events.hpp  render_settings.hpp
src/hacks/: NoCopyMark.cpp  PracticeMusic.cpp
src/hacks/Bot/: Bot.cpp  MemoryPracticeFix.cpp  PracticeFix.cpp
src/hacks/Bypass/: AllowLowVolume.cpp  CharacterFilter.cpp  CharacterLimit.cpp  CheckpointLimit.cpp  CommentHistory.cpp  CopyHack.cpp  CostBypass.cpp  FastChests.cpp  InstantComplete.cpp  LevelKick.cpp  MenuGameplay.cpp  MusicUnlocker.cpp  PathsUnlocker.cpp  PauseBuffering.cpp  ShowSpamComments.cpp  SwiftClick.cpp  TestmodeBypass.cpp  UnlockIcons.cpp  UnlockMainLevels.cpp  UnlockShops.cpp  UnlockVaults.cpp  VerifyHack.cpp
src/hacks/Cosmetic/: CompactViews.cpp  DisableShaders.cpp  PracticeMusic.cpp
src/hacks/Creator/: CopyHack.cpp  CustomObjectBypass.cpp  DefaultSongBypass.cpp  EditorWaveTrail.cpp  FreeScroll.cpp  HideTriggers.cpp  HideUI.cpp  LevelEdit.cpp  Mute.cpp  NoCopyMark.cpp  ResetPercentOnSave.cpp  SliderLimit.cpp  SmoothTrail.cpp  VerifyHack.cpp
src/hacks/Global/: AudioSpeed.cpp  CBFToggle.cpp  CompactViews.cpp  DiscordRPC.cpp  FPSBypass.cpp  LockCursor.cpp  NoMusicFadeOut.cpp  NoShortNumbers.cpp  PitchShift.cpp  PracticeMusic.cpp  SafeMode.cpp  ShowTaps.cpp  Speedhack.cpp  TPSBypass.cpp  TransitionSpeed.cpp  TransparentLists.cpp  VerticalSync.cpp
src/hacks/Labels/: Label.cpp  Label.hpp  LabelContainer.cpp  LabelContainer.hpp  Labels.cpp  SmartLabel.cpp  SmartLabel.hpp
src/hacks/Level/: AccuratePercentage.cpp  AllPassable.cpp  AlwaysShowCoins.cpp  AutoDisableShake.cpp  AutoLDM.cpp  AutoPickupCoins.cpp  AutoPractice.cpp  AutoPracticeMode.cpp  AutoSongDownload.cpp  CheckpointDelay.cpp  ConfirmFullReset.cpp  ConfirmHacks.cpp  ConfirmPractice.cpp  ConfirmRestart.cpp  ForcePlatformer.cpp  FreezeAttempts.cpp  HideLevelCompleteVFX.cpp  HidePauseMenu.cpp  HitboxMultiplier.cpp  InstantMirror.cpp  LayoutMode.cpp  LegacyPulse.cpp  LegacyReversePhysics.cpp  LegacyTrail.cpp  MatchLabelFonts.cpp  MuteLevelSFX.cpp  NoDoNotFlip.cpp  NoEndShake.cpp  NoGlow.cpp  NoMirror.cpp  NoMusicFadeOut.cpp  NoParticles.cpp  NoPortalLightning.cpp  NoShader.cpp  PauseCountdown.cpp  PauseDuringComplete.cpp  PlatGamemodes.cpp  PracticeCoins.cpp  PracticeFix.cpp  RandomSeed.cpp  (+7 more)
src/hacks/Player/: AutoKill.cpp  Autoclicker.cpp  BallRotation.cpp  ClickTeleport.cpp  CustomWaveTrail.cpp  ForceGhostTrail.cpp  FrameStepper.cpp  GhostTrailSettings.cpp  HideOrShowPlayer.cpp  HidePlayer.cpp  HitboxTrajectory.cpp  InstantRespawn.cpp  JumpHack.cpp  MuteLevelAudioOnDeath.cpp  MuteRewardsSFX.cpp  NoDeathEffect.cpp  NoGhostTrail.cpp  NoHideTrigger.cpp  NoPlatformerJumpSquish.cpp  NoRespawnFlash.cpp  NoRobotFire.cpp  NoSpiderDash.cpp  NoTrail.cpp  NoVehicleParticles.cpp  Noclip.cpp  NoclipFlash.cpp  RespawnDelay.cpp  Shipcopter.cpp  ShowTrajectory.cpp  SolidWaveTrail.cpp  WaveTrailOnDeath.cpp  WaveTrailSize.cpp
src/hacks/Recorder/: Recorder.cpp
src/hacks/Shortcuts/: Shortcuts.cpp
src/hacks/Universal/: TransparentLists.cpp  mute.cpp
src/modules/api/: events.cpp  mods.hpp
src/modules/bot/: bot.cpp  bot.hpp
src/modules/chatbot/: updater.cpp
src/modules/chatbot/ai/: Chatbot.cpp  Chatbot.hpp  Context.cpp  Context.hpp  Emotions.cpp  Emotions.hpp  Entities.cpp  Entities.hpp  Fatigue.cpp  Fatigue.hpp  Handles.hpp  Intents.cpp  Intents.hpp  Slots.cpp  Slots.hpp  Stemmer.cpp  Stemmer.hpp  Templates.cpp  Templates.hpp
src/modules/chatbot/ui/: ChatboxPopup.cpp  ChatboxPopup.hpp  MessageBubble.cpp  MessageBubble.hpp  ThinkingIndicator.cpp  ThinkingIndicator.hpp
src/modules/config/: config.cpp  config.hpp
src/modules/debug/: benchmark.cpp  benchmark.hpp  trace.cpp  trace.hpp  utils.hpp
src/modules/gui/: color.cpp  color.hpp  float-button.cpp  float-button.hpp  gui.cpp  gui.hpp  imgui.cpp  imgui.hpp  popup.cpp  popup.hpp  theme.hpp
src/modules/gui/blur/: blur.cpp  blur.hpp
src/modules/gui/cocos/: cocos.cpp  cocos.hpp
src/modules/hack/: hack.cpp  hack.hpp
src/modules/i18n/: DownloadPopup.cpp  DownloadPopup.hpp  translations.cpp  translations.hpp
src/modules/keybinds/: keyboard.cpp  manager.cpp  manager.hpp  touchscreen.cpp
src/modules/labels/: events.cpp  events.hpp  setting.cpp  setting.hpp  variables.cpp  variables.hpp
src/modules/recorder/: DSPRecorder.cpp  DSPRecorder.hpp  recorder.cpp  recorder.hpp  rendertexture.cpp  rendertexture.hpp  spinlock.hpp
src/modules/utils/: GameCheckpoint.hpp  RingBuffer.hpp  SingletonCache.hpp  VMTHooker.hpp  assembler.hpp  vmthooker.hpp
(+115 files in other folders)
